<resources>
    <string name="app_name">Mobile Banking</string>
    <string name="login">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">DOB DD.MM.YYYY</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="save_pdf">Save PDF</string>
    <string name="search">Search</string>
    <string name="to">To</string>
    <string name="date_sample">12.10.2020</string>
    <string name="from">From</string>
    <string name="email">Email</string>
    <string name="balance">Opening balance</string>
    <string name="enable_overdraft">Enable Overdraft</string>
    <string name="account_type">Account Type</string>

    <string-array name="account_types">
        <item>SAVINGS</item>
        <item>CURRENT</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_address">Account Holder Address</string>
    <string name="street">Street</string>
    <string name="postcode">Postal Code</string>
    <string name="number">No.</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="save_address">Save Address</string>
    <string name="error_invalid_password">Password is invalid</string>
    <string name="error_field_required">Field cannot be empty</string>
    <string name="account_number">Account Number:</string>
    <string name="iban_number">IBAN:</string>
    <string name="transaction">New Transaction</string>
    <string name="account_holder">Account Holder</string>
    <string name="beneficiary">Beneficiary\'s IBAN</string>
    <string name="amount">Amount</string>
    <string name="process">Process Transaction</string>
    <string name="transaction_reference">Transaction Reference</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="holder_profile">Account Holder Profile</string>

    <string name="fingerprint_header">Fingerprint Support</string>
    <string name="fingerprint_message">This device does not support fingerprint authentication. This app will not function effectively</string>
    <string name="fingerprint_enrolment">There is no enrolled fingerprint. This app will not function effectively without fingerprint authentication</string>
</resources>