<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    tools:context=".StatementActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/search_param_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:id="@+id/from_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/from"
                    android:textSize="16sp"/>

                <View
                    android:id="@+id/top"
                    android:layout_below="@id/text"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grayish_white" />

                <TextView
                    android:id="@+id/date_from_view"
                    android:layout_below="@+id/top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/date_sample"
                    android:textSize="16sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/grayish_white" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/to_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/text_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/to"
                    android:textSize="16sp"/>

                <View
                    android:id="@+id/top_1"
                    android:layout_below="@id/text_1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grayish_white" />

                <TextView
                    android:id="@+id/date_to_view"
                    android:layout_below="@+id/top_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/date_sample"
                    android:textSize="16sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/grayish_white" />

            </RelativeLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_param_view"
            android:layout_marginTop="30dp"
            android:text="@string/search"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/transaction_list_view"
            android:layout_below="@+id/search_button"
            android:layout_marginTop="30dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pdf_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/transaction_list_view"
            android:layout_marginTop="30dp"
            android:text="@string/save_pdf"
            android:visibility="gone"
            android:textColor="@color/colorPrimary"
            android:background="@color/transparent"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"/>

    </RelativeLayout>

</ScrollView>